# citizen-commit

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml  requirements-dev.txt
glucode-service/: main.py  pyproject.toml
isolated-service/: main.py  pyproject.toml
scripts/: check_cascade.py
